# datasus_gcp

./: .gitignore  pyproject.toml  requirements.txt
bigquery_sql/stored procedures/refined/: refined__tb_sih_rd.sql
bigquery_sql/stored procedures/trusted/: trusted__tb_sih_rd.sql
data/csv_lookup/: lookup_hospitalization_procedure.csv  lookup_municipality.csv
src/: main.py  sheets_to_bigquery.py
src/classes/: __init__.py
src/classes/cloud/: GoogleCloud.py
src/classes/controller/: SIHController.py
