[tool.poetry]
name = "python-datasus"
version = "0.1.0"
description = ""
authors = ["VINICIUS FIALHO <vinicius.fialho96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-auth = "^2.35.0"
pandas = "2.2.2"
loguru = "0.6.0"
google-cloud-storage = "^2.18.2"
duckdb = "^1.1.3"
pandas-gbq = "^0.25.0"
black = "^24.10.0"
isort = "^5.13.2"
taskipy = "^1.14.1"
google-cloud-secret-manager = "^2.22.0"
logfire = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = """
black . && isort .
"""
